# kimi-cli-rs

./: Cargo.toml
.claude/memory/: MEMORY.md  session_recovery.md  translation_project.md
agents/default/: agent.yaml  coder.yaml  explore.yaml  plan.yaml
agents/okabe/: agent.yaml
analysis/: 01_overview_architecture.md  02_data_flow.md  03_command_execution_flow.md  04_soul_loop_flow.md  05_tool_execution_flow.md  06_wire_protocol.md  07_background_subagents.md  08_ui_architecture.md
checkpoints/: latest.json
session_backup_20260417_191945/: session_history.md
src/: agentspec.rs  config.rs  constant.rs  error.rs  lib.rs  main.rs  metadata.rs  session.rs  session_fork.rs  session_state.rs  share.rs
src/acp/: mod.rs
src/app/: mod.rs
src/approval_runtime/: mod.rs  models.rs  runtime.rs
src/auth/: mod.rs  oauth.rs  platforms.rs
src/background/: ids.rs  manager.rs  mod.rs  store.rs  summary.rs  worker.rs
src/cli/: mod.rs
src/hooks/: engine.rs  events.rs  mod.rs  runner.rs
src/llm/: mod.rs
src/mcp/: cli.rs  client.rs  mod.rs  result.rs  server.rs  tool.rs
src/notifications/: llm.rs  manager.rs  mod.rs  notifier.rs  store.rs  wire.rs
src/plugin/: manager.rs  mod.rs
src/skill/: mod.rs
src/soul/: agent.rs  approval.rs  btw.rs  compaction.rs  context.rs  denwa_renji.rs  dynamic_injection.rs  kimisoul.rs  message.rs  mod.rs  slash.rs  toolset.rs
src/subagents/: builder.rs  core.rs  git_context.rs  labor_market.rs  mod.rs  models.rs  registry.rs  (+2 more)
tests/: cli_integration.rs  session_integration.rs  web_api_integration.rs
translation_plan/: 00_index.md  01_foundation.md  02_soul_core.md  03_tools.md  04_wire_servers.md  05_ui_layer.md  06_servers.md  07_cli.md  08_integration.md  09_runtime_extensions.md
(+53 files in other folders)
